--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <link rel= "stylesheet" type = "text/css" href="extilo.css">
     <head>
         <meta charset="utf-8">
         <title>Encripta sabagaça </title>
-</head>
-<h1>Encriptografando Coisas </h1>
-<div id="corpo">
-<H2>
-    Cifra de Cesar
-</H2>
-<button class="info" id = "CesarBtn" onclick="Info()" value="1">O Que é</button>
-<br>
-<br>
-Textinho: <input type="text" id="dado" value="" >
-<br>
-<br>
-Valor da Cifra: <input type = "number" id="cifra" value="4";>
-<br>
-<button class= "Enc" onclick="DoTheCaesarRoll()">Encriptografar </button>
-<br>
-<button class= "Dec" onclick="Choosing()">Descriptografar </button>
-<input type = "checkbox" id = "SeiACifra" name="SeiACifra" unchecked>
-<label for="SeiACifra">Marque Se Não Sabe O Valor Da Cifra</label>
-<br>
-<br>
-<output type="text" id="saida" > </output>
-    <script src="aaa.js"></script>
-</div>
+    </head>
+
+    <h1>Encriptografando Coisas </h1>
+
+    <div id="corpo">
+        <h2>
+            Cifra de Cesar
+        </h2>
+        <button class="info" id = "CesarBtn" onclick="Info()" value="1">O Que é</button>
+        <br>
+        <br>
+        Textinho: <input type="text" id="dado" value="">
+        <br>
+        <br>
+        Valor da Cifra: <input type = "number" id="cifra" value="4">
+        <br>
+        <button class= "Enc" onclick="DoTheCaesarRoll()">Encriptografar</button>
+        <br>
+        <button class= "Dec" onclick="Choosing()">Descriptografar</button>
+        <input type = "checkbox" id = "SeiACifra" name="SeiACifra" unchecked>
+        <label for="SeiACifra">Marque Se Não Sabe O Valor Da Cifra</label>
+        <br>
+        <br>
+        <output type="text" id="saida" > </output>
+        <script src="aaa.js"></script>
+    </div>
 </html>
